# anki-addon-safe-collection-operations

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  config.json  config.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: API.md
safe_collection_operations/: __init__.py  ankiconnect.py  bootstrap.py  grading.py  mcp.py  models.py  registry.py  service.py
scripts/: build_ankiaddon.py  check_public.py  clean.py
tests/: test_adapters.py  test_grading.py
tests/gui_smoke/probe_addon/: __init__.py
