[project]
name = "anki-addon-safe-collection-operations"
version = "0.1.0"
description = "Guarded native collection operations for Anki add-ons and local agent integrations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Elvis Sik" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["safe_collection_operations"]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["tests/fixtures"]

[tool.anki-addon-workbench]
project_name = "Safe Collection Operations for Anki Add-ons"
addon_package = "anki_addon_safe_collection_operations"
source_root = "."
include = [
  "__init__.py",
  "config.json",
  "config.md",
  "manifest.json",
  "safe_collection_operations",
]
exclude = [".git", "__pycache__", "dist", "tests"]
probe_addon = "tests/gui_smoke/probe_addon"
anki_version = "25.09"
profile = "User 1"
docker_image = "anki-safe-collection-operations-gui"
